I think everything is rendering correctly

--- a/single_file.html
+++ b/single_file.html
@@ -1348,7 +1348,7 @@ there.
     </div>
 </div>
 </div>
-    <div class="row offset-by-one ten columns"><div class="suite" id="suite_QRfv6">
+    <div class="row offset-by-one ten columns"><div class="suite" id="suite_RJsEh">
     <button class="suite--failure u-full-width flat" onclick="cta.contract.local.suite(this.parentElement)">
         <span class="suite__name u-pull-left">Multi</span>
         <span class="suite__info u-pull-right">tests: 3</span>
@@ -1356,12 +1356,12 @@ there.
         <span class="suite__info u-pull-right">time: 0.0160106</span>
     </button>
     <div class="suite__contents">
-        <div class="suite__properties">
+        <div class="suite__properties" id="properties_2jDhM">
     <button class="properties__title u-full-width" onclick="cta.contract.local.properties(this.parentElement)">
         <span class="u-pull-left">MULTIPLE PROPERTIES</span>
     </button>
     <div class="properties__list">
-        <div id=properties_iMwIl class="properties">
+        <div id=properties_DIe9I class="properties">
     <button class="properties__title u-full-width" onclick="cta.contract.local.properties(this.parentElement)">
         <span class="u-pull-left">Properties</span>
     </button>
@@ -1371,19 +1371,19 @@ there.
             <th>VALUE</th>
         </thead>
         <tbody>
-            <tr id=property_QUZ0Y>
+            <tr id=property_m2PB8>
     <td><b>flag-type</b></td>
     <td>bug</td>
 </tr>
-<tr id=property_3In56>
+<tr id=property_XqBnf>
     <td><b>flag-content</b></td>
     <td>APPLICATION DEFECT</td>
 </tr>
-<tr id=property_UmsHo>
+<tr id=property_y0Zz1>
     <td><b>Has a name</b></td>
     <td>true</td>
 </tr>
-<tr id=property_e7RGX>
+<tr id=property_pH08c>
     <td><b>URL</b></td>
     <td>&#x2F;hunter&#x2F;overall_test.go</td>
 </tr>
@@ -1391,7 +1391,7 @@ there.
     </table>
 </div>
 
-<div id=properties_RRaAJ class="properties">
+<div id=properties_5gZAf class="properties">
     <button class="properties__title u-full-width" onclick="cta.contract.local.properties(this.parentElement)">
         <span class="u-pull-left">Properties</span>
     </button>
@@ -1401,7 +1401,7 @@ there.
             <th>VALUE</th>
         </thead>
         <tbody>
-            <tr id=property_vnbaP>
+            <tr id=property_qRvzo>
     <td><b>even</b></td>
     <td>more</td>
 </tr>
@@ -1411,28 +1411,28 @@ there.
 
     </div>
 </div>
-        <div class="suite__tests"><div class="test" id="test_VLkDY">
+        <div class="suite__tests"><div class="test" id="test_bkgbM">
     <button class="test__name test--error u-full-width flat" onclick="cta.contract.local.test(this.parentElement)">
         <span class="u-pull-left">Is An Error</span>
         <span class="u-pull-right">0.00075</span>
     </button>
-    <div class="test__messages"><div id="message_acPzu" class="test__message">java.lang.RuntimeException: There was an error</div>
-<div id="message_6bawB" class="test__message">java.lang.RuntimeException: There was an error</div></div>
+    <div class="test__messages"><div id="message_nigQ1" class="test__message">java.lang.RuntimeException: There was an error</div>
+<div id="message_cl50t" class="test__message">java.lang.RuntimeException: There was an error</div></div>
 </div>
 
-<div class="test" id="test_a0vHr">
+<div class="test" id="test_X58JJ">
     <button class="test__name test--failure u-full-width flat" onclick="cta.contract.local.test(this.parentElement)">
         <span class="u-pull-left">It Is A Failure</span>
         <span class="u-pull-right">0.012011200000000001</span>
     </button>
-    <div id="message_dTxxO" class="test__message--single">FILENAME:XX
+    <div id="message_DEvIb" class="test__message--single">FILENAME:XX
 Expected
     <string>: Luke
 to equal
     <string>: luke</div>
 </div>
 
-<div class="test" id="test_FkTQA">
+<div class="test" id="test_hDRvS">
     <button class="test__name test--passed u-full-width " onclick="cta.contract.local.test(this.parentElement)">
         <span class="u-pull-left">It Is A Pass</span>
         <span class="u-pull-right">0.000625</span>
@@ -1440,19 +1440,19 @@ to equal
     
 </div>
 
-<div class="test" id="test_qC9yB">
+<div class="test" id="test_rEtdI">
     <button class="test__name test--skipped u-full-width flat" onclick="cta.contract.local.test(this.parentElement)">
         <span class="u-pull-left">It Is Skipped</span>
         <span class="u-pull-right">0</span>
     </button>
-    <div class="test__messages"><div id="message_ndRRh" class="test__message">This is a message</div>
-<div id="message_uLkcC" class="test__message">This is a message</div></div>
+    <div class="test__messages"><div id="message_UfveI" class="test__message">This is a message</div>
+<div id="message_LZNqN" class="test__message">This is a message</div></div>
 </div>
 </div>
     </div>
 </div>
 </div>
-    <script type="text/javascript">var suites = [{"id":"suite_QRfv6","type":"failure","name":"Multi","time":"0.0160106","tests":"3","failures":"1","properties":[{"id":"properties_iMwIl","props":[{"name":"flag-type","value":"bug","id":"property_QUZ0Y"},{"name":"flag-content","value":"APPLICATION DEFECT","id":"property_3In56"},{"name":"Has a name","value":"true","id":"property_UmsHo"},{"name":"URL","value":"/hunter/overall_test.go","id":"property_e7RGX"}]},{"id":"properties_RRaAJ","props":[{"name":"even","value":"more","id":"property_vnbaP"}]}],"testCases":[{"id":"test_VLkDY","time":"0.00075","name":"Is An Error","type":"error","messages":[{"id":"message_acPzu","message":"java.lang.RuntimeException: There was an error"},{"id":"message_6bawB","message":"java.lang.RuntimeException: There was an error"}]},{"id":"test_a0vHr","time":"0.012011200000000001","name":"It Is A Failure","type":"failure","messages":[{"id":"message_dTxxO","message":"FILENAME:XX\nExpected\n    <string>: Luke\nto equal\n    <string>: luke"}]},{"id":"test_FkTQA","time":"0.000625","name":"It Is A Pass","type":"passed"},{"id":"test_qC9yB","time":"0","name":"It Is Skipped","type":"skipped","messages":[{"id":"message_ndRRh","message":"This is a message"},{"id":"message_uLkcC","message":"This is a message"}]}]}]
+    <script type="text/javascript">var suites = [{"id":"suite_RJsEh","type":"failure","name":"Multi","time":"0.0160106","tests":"3","failures":"1","properties":{"id":"properties_2jDhM","values":[{"id":"properties_DIe9I","props":[{"name":"flag-type","value":"bug","id":"property_m2PB8"},{"name":"flag-content","value":"APPLICATION DEFECT","id":"property_XqBnf"},{"name":"Has a name","value":"true","id":"property_y0Zz1"},{"name":"URL","value":"/hunter/overall_test.go","id":"property_pH08c"}]},{"id":"properties_5gZAf","props":[{"name":"even","value":"more","id":"property_qRvzo"}]}]},"testCases":[{"id":"test_bkgbM","time":"0.00075","name":"Is An Error","type":"error","messages":[{"id":"message_nigQ1","message":"java.lang.RuntimeException: There was an error"},{"id":"message_cl50t","message":"java.lang.RuntimeException: There was an error"}]},{"id":"test_X58JJ","time":"0.012011200000000001","name":"It Is A Failure","type":"failure","messages":[{"id":"message_DEvIb","message":"FILENAME:XX\nExpected\n    <string>: Luke\nto equal\n    <string>: luke"}]},{"id":"test_hDRvS","time":"0.000625","name":"It Is A Pass","type":"passed"},{"id":"test_rEtdI","time":"0","name":"It Is Skipped","type":"skipped","messages":[{"id":"message_UfveI","message":"This is a message"},{"id":"message_LZNqN","message":"This is a message"}]}]}]
 function createToggleDisplay(by) {
     return function(element) {
         var isHidden = element.className.indexOf(' hide--' + by) !== -1
