adding time to tests

--- a/single_file.html
+++ b/single_file.html
@@ -1348,7 +1348,7 @@ there.
     </div>
 </div>
 </div>
-    <div class="row offset-by-one ten columns"><div class="suite" id="suite_RJsEh">
+    <div class="row offset-by-one ten columns"><div class="suite" id="suite_QAA7Q">
     <button class="suite--failure u-full-width flat" onclick="cta.contract.local.suite(this.parentElement)">
         <span class="suite__name u-pull-left">Multi</span>
         <span class="suite__info u-pull-right">tests: 3</span>
@@ -1356,12 +1356,12 @@ there.
         <span class="suite__info u-pull-right">time: 0.0160106</span>
     </button>
     <div class="suite__contents">
-        <div class="suite__properties" id="properties_2jDhM">
+        <div class="suite__properties" id="properties_QYLU9">
     <button class="properties__title u-full-width" onclick="cta.contract.local.properties(this.parentElement)">
         <span class="u-pull-left">MULTIPLE PROPERTIES</span>
     </button>
     <div class="properties__list">
-        <div id=properties_DIe9I class="properties">
+        <div id=properties_hL1Us class="properties">
     <button class="properties__title u-full-width" onclick="cta.contract.local.properties(this.parentElement)">
         <span class="u-pull-left">Properties</span>
     </button>
@@ -1371,19 +1371,19 @@ there.
             <th>VALUE</th>
         </thead>
         <tbody>
-            <tr id=property_m2PB8>
+            <tr id=property_CzG12>
     <td><b>flag-type</b></td>
     <td>bug</td>
 </tr>
-<tr id=property_XqBnf>
+<tr id=property_hWMcG>
     <td><b>flag-content</b></td>
     <td>APPLICATION DEFECT</td>
 </tr>
-<tr id=property_y0Zz1>
+<tr id=property_NfPTx>
     <td><b>Has a name</b></td>
     <td>true</td>
 </tr>
-<tr id=property_pH08c>
+<tr id=property_C6DCE>
     <td><b>URL</b></td>
     <td>&#x2F;hunter&#x2F;overall_test.go</td>
 </tr>
@@ -1391,7 +1391,7 @@ there.
     </table>
 </div>
 
-<div id=properties_5gZAf class="properties">
+<div id=properties_LzBlv class="properties">
     <button class="properties__title u-full-width" onclick="cta.contract.local.properties(this.parentElement)">
         <span class="u-pull-left">Properties</span>
     </button>
@@ -1401,7 +1401,7 @@ there.
             <th>VALUE</th>
         </thead>
         <tbody>
-            <tr id=property_qRvzo>
+            <tr id=property_Ivpk8>
     <td><b>even</b></td>
     <td>more</td>
 </tr>
@@ -1411,48 +1411,48 @@ there.
 
     </div>
 </div>
-        <div class="suite__tests"><div class="test" id="test_bkgbM">
+        <div class="suite__tests"><div class="test" id="test_qb7aL">
     <button class="test__name test--error u-full-width flat" onclick="cta.contract.local.test(this.parentElement)">
         <span class="u-pull-left">Is An Error</span>
-        <span class="u-pull-right">0.00075</span>
+        <span class="u-pull-right">TIME: 0.00075</span>
     </button>
-    <div class="test__messages"><div id="message_nigQ1" class="test__message">java.lang.RuntimeException: There was an error</div>
-<div id="message_cl50t" class="test__message">java.lang.RuntimeException: There was an error</div></div>
+    <div class="test__messages"><div id="message_XZaMw" class="test__message">java.lang.RuntimeException: There was an error</div>
+<div id="message_N4Vqw" class="test__message">java.lang.RuntimeException: There was an error</div></div>
 </div>
 
-<div class="test" id="test_X58JJ">
+<div class="test" id="test_4EL7A">
     <button class="test__name test--failure u-full-width flat" onclick="cta.contract.local.test(this.parentElement)">
         <span class="u-pull-left">It Is A Failure</span>
-        <span class="u-pull-right">0.012011200000000001</span>
+        <span class="u-pull-right">TIME: 0.012011200000000001</span>
     </button>
-    <div id="message_DEvIb" class="test__message--single">FILENAME:XX
+    <div id="message_FeO1J" class="test__message--single">FILENAME:XX
 Expected
     <string>: Luke
 to equal
     <string>: luke</div>
 </div>
 
-<div class="test" id="test_hDRvS">
+<div class="test" id="test_slW7N">
     <button class="test__name test--passed u-full-width " onclick="cta.contract.local.test(this.parentElement)">
         <span class="u-pull-left">It Is A Pass</span>
-        <span class="u-pull-right">0.000625</span>
+        <span class="u-pull-right">TIME: 0.000625</span>
     </button>
     
 </div>
 
-<div class="test" id="test_rEtdI">
+<div class="test" id="test_LPNdR">
     <button class="test__name test--skipped u-full-width flat" onclick="cta.contract.local.test(this.parentElement)">
         <span class="u-pull-left">It Is Skipped</span>
-        <span class="u-pull-right">0</span>
+        <span class="u-pull-right">TIME: 0</span>
     </button>
-    <div class="test__messages"><div id="message_UfveI" class="test__message">This is a message</div>
-<div id="message_LZNqN" class="test__message">This is a message</div></div>
+    <div class="test__messages"><div id="message_mvCmL" class="test__message">This is a message</div>
+<div id="message_0KjLU" class="test__message">This is a message</div></div>
 </div>
 </div>
     </div>
 </div>
 </div>
-    <script type="text/javascript">var suites = [{"id":"suite_RJsEh","type":"failure","name":"Multi","time":"0.0160106","tests":"3","failures":"1","properties":{"id":"properties_2jDhM","values":[{"id":"properties_DIe9I","props":[{"name":"flag-type","value":"bug","id":"property_m2PB8"},{"name":"flag-content","value":"APPLICATION DEFECT","id":"property_XqBnf"},{"name":"Has a name","value":"true","id":"property_y0Zz1"},{"name":"URL","value":"/hunter/overall_test.go","id":"property_pH08c"}]},{"id":"properties_5gZAf","props":[{"name":"even","value":"more","id":"property_qRvzo"}]}]},"testCases":[{"id":"test_bkgbM","time":"0.00075","name":"Is An Error","type":"error","messages":[{"id":"message_nigQ1","message":"java.lang.RuntimeException: There was an error"},{"id":"message_cl50t","message":"java.lang.RuntimeException: There was an error"}]},{"id":"test_X58JJ","time":"0.012011200000000001","name":"It Is A Failure","type":"failure","messages":[{"id":"message_DEvIb","message":"FILENAME:XX\nExpected\n    <string>: Luke\nto equal\n    <string>: luke"}]},{"id":"test_hDRvS","time":"0.000625","name":"It Is A Pass","type":"passed"},{"id":"test_rEtdI","time":"0","name":"It Is Skipped","type":"skipped","messages":[{"id":"message_UfveI","message":"This is a message"},{"id":"message_LZNqN","message":"This is a message"}]}]}]
+    <script type="text/javascript">var suites = [{"id":"suite_QAA7Q","type":"failure","name":"Multi","time":"0.0160106","tests":"3","failures":"1","properties":{"id":"properties_QYLU9","values":[{"id":"properties_hL1Us","props":[{"name":"flag-type","value":"bug","id":"property_CzG12"},{"name":"flag-content","value":"APPLICATION DEFECT","id":"property_hWMcG"},{"name":"Has a name","value":"true","id":"property_NfPTx"},{"name":"URL","value":"/hunter/overall_test.go","id":"property_C6DCE"}]},{"id":"properties_LzBlv","props":[{"name":"even","value":"more","id":"property_Ivpk8"}]}]},"testCases":[{"id":"test_qb7aL","time":"0.00075","name":"Is An Error","type":"error","messages":[{"id":"message_XZaMw","message":"java.lang.RuntimeException: There was an error"},{"id":"message_N4Vqw","message":"java.lang.RuntimeException: There was an error"}]},{"id":"test_4EL7A","time":"0.012011200000000001","name":"It Is A Failure","type":"failure","messages":[{"id":"message_FeO1J","message":"FILENAME:XX\nExpected\n    <string>: Luke\nto equal\n    <string>: luke"}]},{"id":"test_slW7N","time":"0.000625","name":"It Is A Pass","type":"passed"},{"id":"test_LPNdR","time":"0","name":"It Is Skipped","type":"skipped","messages":[{"id":"message_mvCmL","message":"This is a message"},{"id":"message_0KjLU","message":"This is a message"}]}]}]
 function createToggleDisplay(by) {
     return function(element) {
         var isHidden = element.className.indexOf(' hide--' + by) !== -1
