contracting and hiding tests works

--- a/single_file.html
+++ b/single_file.html
@@ -1348,7 +1348,7 @@ there.
     </div>
 </div>
 </div>
-    <div class="row offset-by-one ten columns"><div class="suite" id="suite_12FxQ">
+    <div class="row offset-by-one ten columns"><div class="suite" id="suite_t5LAX">
     <button class="suite--failure u-full-width flat" onclick="cta.contract.local.suite(this.parentElement)">
         <span class="suite__name u-pull-left">Multi</span>
         <span class="suite__info u-pull-right">tests: 3</span>
@@ -1356,12 +1356,12 @@ there.
         <span class="suite__info u-pull-right">time: 0.0160106</span>
     </button>
     <div class="suite__contents">
-        <div class="suite__properties" id="properties_dhn60">
+        <div class="suite__properties" id="properties_rYtyH">
     <button class="properties__title u-full-width" onclick="cta.contract.local.properties(this.parentElement)">
         <span class="u-pull-left">MULTIPLE PROPERTIES</span>
     </button>
     <div class="properties__list">
-        <div id=properties_02kt4 class="properties">
+        <div id=properties_iu7ZN class="properties">
     <button class="properties__title u-full-width" onclick="cta.contract.local.properties(this.parentElement)">
         <span class="u-pull-left">Properties</span>
     </button>
@@ -1371,19 +1371,19 @@ there.
             <th>VALUE</th>
         </thead>
         <tbody>
-            <tr id=property_dMXgE>
+            <tr id=property_Ha248>
     <td><b>flag-type</b></td>
     <td>bug</td>
 </tr>
-<tr id=property_6kcRA>
+<tr id=property_rKQBk>
     <td><b>flag-content</b></td>
     <td>APPLICATION DEFECT</td>
 </tr>
-<tr id=property_C2tm8>
+<tr id=property_jpMgd>
     <td><b>Has a name</b></td>
     <td>true</td>
 </tr>
-<tr id=property_Aov3c>
+<tr id=property_j8SGr>
     <td><b>URL</b></td>
     <td>&#x2F;hunter&#x2F;overall_test.go</td>
 </tr>
@@ -1391,7 +1391,7 @@ there.
     </table>
 </div>
 
-<div id=properties_q5f2z class="properties">
+<div id=properties_Pomtx class="properties">
     <button class="properties__title u-full-width" onclick="cta.contract.local.properties(this.parentElement)">
         <span class="u-pull-left">Properties</span>
     </button>
@@ -1401,7 +1401,7 @@ there.
             <th>VALUE</th>
         </thead>
         <tbody>
-            <tr id=property_wa1hy>
+            <tr id=property_4Samr>
     <td><b>even</b></td>
     <td>more</td>
 </tr>
@@ -1411,28 +1411,28 @@ there.
 
     </div>
 </div>
-        <div class="suite__tests"><div class="test" id="test_lbcKW">
+        <div class="suite__tests"><div class="test" id="test_J8jzm">
     <button class="test__name test--error u-full-width flat" onclick="cta.contract.local.test(this.parentElement)">
         <span class="u-pull-left">Is An Error</span>
         <span class="u-pull-right">TIME: 0.00075</span>
     </button>
-    <div class="test__messages"><div id="message_6U9ih" class="test__message">java.lang.RuntimeException: There was an error</div>
-<div id="message_QVLlT" class="test__message">java.lang.RuntimeException: There was an error</div></div>
+    <div class="test__messages"><div id="message_5nRJb" class="test__message">java.lang.RuntimeException: There was an error</div>
+<div id="message_q7h9a" class="test__message">java.lang.RuntimeException: There was an error</div></div>
 </div>
 
-<div class="test" id="test_b9oVA">
+<div class="test" id="test_Ra1sc">
     <button class="test__name test--failure u-full-width flat" onclick="cta.contract.local.test(this.parentElement)">
         <span class="u-pull-left">It Is A Failure</span>
         <span class="u-pull-right">TIME: 0.012011200000000001</span>
     </button>
-    <div id="message_kIYr2" class="test__message--single">FILENAME:XX
+    <div id="message_vFE0D" class="test__message--single">FILENAME:XX
 Expected
     <string>: Luke
 to equal
     <string>: luke</div>
 </div>
 
-<div class="test" id="test_fNpCe">
+<div class="test" id="test_MiBKe">
     <button class="test__name test--passed u-full-width " onclick="cta.contract.local.test(this.parentElement)">
         <span class="u-pull-left">It Is A Pass</span>
         <span class="u-pull-right">TIME: 0.000625</span>
@@ -1440,19 +1440,19 @@ to equal
     
 </div>
 
-<div class="test" id="test_zzKId">
+<div class="test" id="test_qKZjw">
     <button class="test__name test--skipped u-full-width flat" onclick="cta.contract.local.test(this.parentElement)">
         <span class="u-pull-left">It Is Skipped</span>
         <span class="u-pull-right">TIME: 0</span>
     </button>
-    <div class="test__messages"><div id="message_IcsTV" class="test__message">This is a message</div>
-<div id="message_Ta2TE" class="test__message">This is a message</div></div>
+    <div class="test__messages"><div id="message_f5cW2" class="test__message">This is a message</div>
+<div id="message_ddfJy" class="test__message">This is a message</div></div>
 </div>
 </div>
     </div>
 </div>
 </div>
-    <script type="text/javascript">var suites = [{"id":"suite_12FxQ","type":"failure","name":"Multi","time":"0.0160106","tests":"3","failures":"1","properties":{"id":"properties_dhn60","values":[{"id":"properties_02kt4","props":[{"name":"flag-type","value":"bug","id":"property_dMXgE"},{"name":"flag-content","value":"APPLICATION DEFECT","id":"property_6kcRA"},{"name":"Has a name","value":"true","id":"property_C2tm8"},{"name":"URL","value":"/hunter/overall_test.go","id":"property_Aov3c"}]},{"id":"properties_q5f2z","props":[{"name":"even","value":"more","id":"property_wa1hy"}]}]},"testCases":[{"id":"test_lbcKW","time":"0.00075","name":"Is An Error","type":"error","messages":[{"id":"message_6U9ih","message":"java.lang.RuntimeException: There was an error"},{"id":"message_QVLlT","message":"java.lang.RuntimeException: There was an error"}]},{"id":"test_b9oVA","time":"0.012011200000000001","name":"It Is A Failure","type":"failure","messages":[{"id":"message_kIYr2","message":"FILENAME:XX\nExpected\n    <string>: Luke\nto equal\n    <string>: luke"}]},{"id":"test_fNpCe","time":"0.000625","name":"It Is A Pass","type":"passed"},{"id":"test_zzKId","time":"0","name":"It Is Skipped","type":"skipped","messages":[{"id":"message_IcsTV","message":"This is a message"},{"id":"message_Ta2TE","message":"This is a message"}]}]}]
+    <script type="text/javascript">var suites = [{"id":"suite_t5LAX","type":"failure","name":"Multi","time":"0.0160106","tests":"3","failures":"1","properties":{"id":"properties_rYtyH","values":[{"id":"properties_iu7ZN","props":[{"name":"flag-type","value":"bug","id":"property_Ha248"},{"name":"flag-content","value":"APPLICATION DEFECT","id":"property_rKQBk"},{"name":"Has a name","value":"true","id":"property_jpMgd"},{"name":"URL","value":"/hunter/overall_test.go","id":"property_j8SGr"}]},{"id":"properties_Pomtx","props":[{"name":"even","value":"more","id":"property_4Samr"}]}]},"testCases":[{"id":"test_J8jzm","time":"0.00075","name":"Is An Error","type":"error","messages":[{"id":"message_5nRJb","message":"java.lang.RuntimeException: There was an error"},{"id":"message_q7h9a","message":"java.lang.RuntimeException: There was an error"}]},{"id":"test_Ra1sc","time":"0.012011200000000001","name":"It Is A Failure","type":"failure","messages":[{"id":"message_vFE0D","message":"FILENAME:XX\nExpected\n    <string>: Luke\nto equal\n    <string>: luke"}]},{"id":"test_MiBKe","time":"0.000625","name":"It Is A Pass","type":"passed"},{"id":"test_qKZjw","time":"0","name":"It Is Skipped","type":"skipped","messages":[{"id":"message_f5cW2","message":"This is a message"},{"id":"message_ddfJy","message":"This is a message"}]}]}]
 function createToggleDisplay(by) {
     return function(element) {
         var isHidden = element.className.indexOf(' hide--' + by) !== -1
@@ -1494,7 +1494,7 @@ function forEachSuite(callback) {
 
 function forEachTest(callback) {
     forEachSuite(function(suite) {
-        suite.tests.forEach(function(test) {
+        suite.testCases.forEach(function(test) {
             callback(test, suite)
         })
     })
