contracting and expanding is better for properties

--- a/single_file.html
+++ b/single_file.html
@@ -1348,7 +1348,7 @@ there.
     </div>
 </div>
 </div>
-    <div class="row offset-by-one ten columns"><div class="suite" id="suite_t5LAX">
+    <div class="row offset-by-one ten columns"><div class="suite" id="suite_BdqUW">
     <button class="suite--failure u-full-width flat" onclick="cta.contract.local.suite(this.parentElement)">
         <span class="suite__name u-pull-left">Multi</span>
         <span class="suite__info u-pull-right">tests: 3</span>
@@ -1356,12 +1356,12 @@ there.
         <span class="suite__info u-pull-right">time: 0.0160106</span>
     </button>
     <div class="suite__contents">
-        <div class="suite__properties" id="properties_rYtyH">
+        <div class="suite__properties" id="properties_eH29W">
     <button class="properties__title u-full-width" onclick="cta.contract.local.properties(this.parentElement)">
         <span class="u-pull-left">MULTIPLE PROPERTIES</span>
     </button>
     <div class="properties__list">
-        <div id=properties_iu7ZN class="properties">
+        <div id=properties_G8sgQ class="properties">
     <button class="properties__title u-full-width" onclick="cta.contract.local.properties(this.parentElement)">
         <span class="u-pull-left">Properties</span>
     </button>
@@ -1371,19 +1371,19 @@ there.
             <th>VALUE</th>
         </thead>
         <tbody>
-            <tr id=property_Ha248>
+            <tr id=property_3pQ81>
     <td><b>flag-type</b></td>
     <td>bug</td>
 </tr>
-<tr id=property_rKQBk>
+<tr id=property_x1trD>
     <td><b>flag-content</b></td>
     <td>APPLICATION DEFECT</td>
 </tr>
-<tr id=property_jpMgd>
+<tr id=property_e9jzC>
     <td><b>Has a name</b></td>
     <td>true</td>
 </tr>
-<tr id=property_j8SGr>
+<tr id=property_yTzfp>
     <td><b>URL</b></td>
     <td>&#x2F;hunter&#x2F;overall_test.go</td>
 </tr>
@@ -1391,7 +1391,7 @@ there.
     </table>
 </div>
 
-<div id=properties_Pomtx class="properties">
+<div id=properties_nOPjD class="properties">
     <button class="properties__title u-full-width" onclick="cta.contract.local.properties(this.parentElement)">
         <span class="u-pull-left">Properties</span>
     </button>
@@ -1401,7 +1401,7 @@ there.
             <th>VALUE</th>
         </thead>
         <tbody>
-            <tr id=property_4Samr>
+            <tr id=property_uZZa7>
     <td><b>even</b></td>
     <td>more</td>
 </tr>
@@ -1411,28 +1411,28 @@ there.
 
     </div>
 </div>
-        <div class="suite__tests"><div class="test" id="test_J8jzm">
+        <div class="suite__tests"><div class="test" id="test_ZYyPh">
     <button class="test__name test--error u-full-width flat" onclick="cta.contract.local.test(this.parentElement)">
         <span class="u-pull-left">Is An Error</span>
         <span class="u-pull-right">TIME: 0.00075</span>
     </button>
-    <div class="test__messages"><div id="message_5nRJb" class="test__message">java.lang.RuntimeException: There was an error</div>
-<div id="message_q7h9a" class="test__message">java.lang.RuntimeException: There was an error</div></div>
+    <div class="test__messages"><div id="message_b8MHv" class="test__message">java.lang.RuntimeException: There was an error</div>
+<div id="message_WSiOt" class="test__message">java.lang.RuntimeException: There was an error</div></div>
 </div>
 
-<div class="test" id="test_Ra1sc">
+<div class="test" id="test_bD4vb">
     <button class="test__name test--failure u-full-width flat" onclick="cta.contract.local.test(this.parentElement)">
         <span class="u-pull-left">It Is A Failure</span>
         <span class="u-pull-right">TIME: 0.012011200000000001</span>
     </button>
-    <div id="message_vFE0D" class="test__message--single">FILENAME:XX
+    <div id="message_GcZv1" class="test__message--single">FILENAME:XX
 Expected
     <string>: Luke
 to equal
     <string>: luke</div>
 </div>
 
-<div class="test" id="test_MiBKe">
+<div class="test" id="test_vM4Du">
     <button class="test__name test--passed u-full-width " onclick="cta.contract.local.test(this.parentElement)">
         <span class="u-pull-left">It Is A Pass</span>
         <span class="u-pull-right">TIME: 0.000625</span>
@@ -1440,19 +1440,19 @@ to equal
     
 </div>
 
-<div class="test" id="test_qKZjw">
+<div class="test" id="test_VfXHr">
     <button class="test__name test--skipped u-full-width flat" onclick="cta.contract.local.test(this.parentElement)">
         <span class="u-pull-left">It Is Skipped</span>
         <span class="u-pull-right">TIME: 0</span>
     </button>
-    <div class="test__messages"><div id="message_f5cW2" class="test__message">This is a message</div>
-<div id="message_ddfJy" class="test__message">This is a message</div></div>
+    <div class="test__messages"><div id="message_lp0Qj" class="test__message">This is a message</div>
+<div id="message_3eaMI" class="test__message">This is a message</div></div>
 </div>
 </div>
     </div>
 </div>
 </div>
-    <script type="text/javascript">var suites = [{"id":"suite_t5LAX","type":"failure","name":"Multi","time":"0.0160106","tests":"3","failures":"1","properties":{"id":"properties_rYtyH","values":[{"id":"properties_iu7ZN","props":[{"name":"flag-type","value":"bug","id":"property_Ha248"},{"name":"flag-content","value":"APPLICATION DEFECT","id":"property_rKQBk"},{"name":"Has a name","value":"true","id":"property_jpMgd"},{"name":"URL","value":"/hunter/overall_test.go","id":"property_j8SGr"}]},{"id":"properties_Pomtx","props":[{"name":"even","value":"more","id":"property_4Samr"}]}]},"testCases":[{"id":"test_J8jzm","time":"0.00075","name":"Is An Error","type":"error","messages":[{"id":"message_5nRJb","message":"java.lang.RuntimeException: There was an error"},{"id":"message_q7h9a","message":"java.lang.RuntimeException: There was an error"}]},{"id":"test_Ra1sc","time":"0.012011200000000001","name":"It Is A Failure","type":"failure","messages":[{"id":"message_vFE0D","message":"FILENAME:XX\nExpected\n    <string>: Luke\nto equal\n    <string>: luke"}]},{"id":"test_MiBKe","time":"0.000625","name":"It Is A Pass","type":"passed"},{"id":"test_qKZjw","time":"0","name":"It Is Skipped","type":"skipped","messages":[{"id":"message_f5cW2","message":"This is a message"},{"id":"message_ddfJy","message":"This is a message"}]}]}]
+    <script type="text/javascript">var suites = [{"id":"suite_BdqUW","type":"failure","name":"Multi","time":"0.0160106","tests":"3","failures":"1","properties":{"id":"properties_eH29W","values":[{"id":"properties_G8sgQ","props":[{"name":"flag-type","value":"bug","id":"property_3pQ81"},{"name":"flag-content","value":"APPLICATION DEFECT","id":"property_x1trD"},{"name":"Has a name","value":"true","id":"property_e9jzC"},{"name":"URL","value":"/hunter/overall_test.go","id":"property_yTzfp"}]},{"id":"properties_nOPjD","props":[{"name":"even","value":"more","id":"property_uZZa7"}]}]},"testCases":[{"id":"test_ZYyPh","time":"0.00075","name":"Is An Error","type":"error","messages":[{"id":"message_b8MHv","message":"java.lang.RuntimeException: There was an error"},{"id":"message_WSiOt","message":"java.lang.RuntimeException: There was an error"}]},{"id":"test_bD4vb","time":"0.012011200000000001","name":"It Is A Failure","type":"failure","messages":[{"id":"message_GcZv1","message":"FILENAME:XX\nExpected\n    <string>: Luke\nto equal\n    <string>: luke"}]},{"id":"test_vM4Du","time":"0.000625","name":"It Is A Pass","type":"passed"},{"id":"test_VfXHr","time":"0","name":"It Is Skipped","type":"skipped","messages":[{"id":"message_lp0Qj","message":"This is a message"},{"id":"message_3eaMI","message":"This is a message"}]}]}]
 function createToggleDisplay(by) {
     return function(element) {
         var isHidden = element.className.indexOf(' hide--' + by) !== -1
@@ -1543,8 +1543,15 @@ var cta = {
             var isHidden = element.innerHTML.indexOf('HIDE') !== -1
             element.innerHTML = (isHidden ? 'SHOW' : 'HIDE') + ' ALL'
             forEachProperties(function(properties) {
-                var propertiesElement = document.getElementById(properties.id)
-                toggleBy.global_hide_all(propertiesElement);
+                if (properties.values.length > 1) {
+                    var propertiesElement = document.getElementById(properties.id)
+                    toggleBy.global_hide_all(propertiesElement);
+                } else {
+                    properties.values.forEach(function(value) {
+                        var propertiesElement = document.getElementById(value.id)
+                        toggleBy.global_hide_all(propertiesElement);
+                    })
+                }
             })
         }
     },
@@ -1584,9 +1591,17 @@ var cta = {
             properties: function(element) {
                 var isHidden = element.innerHTML.indexOf('CONTRACT') !== -1
                 element.innerHTML = (isHidden ? 'EXPAND' : 'CONTRACT') + ' ALL'
+
                 forEachProperties(function(properties) {
-                    var propertiesElement = document.getElementById(properties.id)
-                    contract(propertiesElement, 'global')
+                    if (properties.values.length > 1) {
+                        var propertiesElement = document.getElementById(properties.id)
+                        contract(propertiesElement, 'global')
+                    } else {
+                        properties.values.forEach(function(value) {
+                            var propertiesElement = document.getElementById(value.id)
+                            contract(propertiesElement, 'global')
+                        })
+                    }
                 })
             }
         }
